testsuite/testcases/src/test/cases/syntaxnull/null-flex.output
Reading "null.flex"

Error in file "null.flex" (line 9): 
Syntax error.
}
^
instead expected token classes are [error, OPENBRACKET, HAT, OPENCLASS, LESSTHAN, JLETTERCLASS, JLETTERDIGITCLASS, LETTERCLASS, DIGITCLASS, DIGITCLASSNOT, UPPERCLASS, LOWERCLASS, EOFRULE, WHITESPACECLASS, WHITESPACECLASSNOT, WORDCLASS, WORDCLASSNOT, BAR, POINT, NEWLINE, BANG, TILDE, CHAR, STRING, MACROUSE, UNIPROPCCLASS, UNIPROPCCLASSNOT]
1 error, 0 warnings.
